<resources>
    <string name="app_name">Android-kotlin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">名称</string>
    <string name="password">密码</string>
    <string name="account">账号</string>
    <string name="password_alias">密码别名</string>
    <string name="remark">备注</string>
    <string name="description">描述</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
</resources>
